syntax = "proto3";

option csharp_namespace = "WConnect.Gateway";

package users;

service SignUp {
  rpc SignUp (SignUpGrpcRequest) returns (SignUpGrpcResponse);
}

message SignUpGrpcRequest {
  string name = 1;
  string login = 2;
  string password = 3;
  bytes photo = 4;
}

message SignUpGrpcResponse {
  int32 id = 1;
}
