syntax = "proto3";

option csharp_namespace = "WConnect.Gateway";

package users;

service SignIn {
  rpc SignIn (SignInGrpcRequest) returns (SignInGrpcResponse);
}

message SignInGrpcRequest {
  string login = 1;
  string password = 2;
}

message SignInGrpcResponse {
  string access_token = 1;
  string access_token_expiry_time = 2;
}
